--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>France</title>
     <meta name="description" content="Описание страницы" />
     
-    <link rel="stylesheet" type="text/css" href="france.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="icon" href="/img/favicon.png">
     <script type="text/javascript" src="https://code.jquery.com/jquery-latest.min.js"></script>
   </head>
