--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <div class="row">
         <!--image card start-->
         <div class="image1">
-          <img src="parisv.jpg" alt="">
+          <img src="france/parisv.jpg" alt="">
           <div class="details">
             <h2>Paris <span>city</span></h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
