--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <div class="banner">
       <video autoplay muted loop>
-        <source src="francevid.mp4" type="video/mp4">
+        <source src="france/francevid.mp4" type="video/mp4">
       </video>
       <div class="content1">
         <h1>France</h1>
